--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@ repositories {
 }
 
 dependencies {
-    compileOnly "com.viaversion:viaversion:4.6.0-23w07a-SNAPSHOT"
-    compileOnly("com.viaversion:viabackwards-common:4.6.0-23w06a-SNAPSHOT") {
+    compileOnly "com.viaversion:viaversion:4.6.0-1.19.4-pre3-SNAPSHOT"
+    compileOnly("com.viaversion:viabackwards-common:4.6.0-1.19.4-pre3-SNAPSHOT") {
         exclude group: "com.viaversion", module: "viaversion"
     }
-    compileOnly "org.yaml:snakeyaml:1.33"
+    compileOnly "org.yaml:snakeyaml:2.0"
 }
 
 blossom {
