--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly "com.viaversion:viaversion:4.7.1-SNAPSHOT"
-    compileOnly("com.viaversion:viabackwards-common:4.7.1-SNAPSHOT") {
+    compileOnly "com.viaversion:viaversion:4.8.0-23w31a-SNAPSHOT"
+    compileOnly("com.viaversion:viabackwards-common:4.8.0-23w31a-SNAPSHOT") {
         exclude group: "com.viaversion", module: "viaversion"
     }
     compileOnly "org.yaml:snakeyaml:2.1"
