--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java-library"
     id "maven-publish"
-    id "net.kyori.blossom" version "1.3.1"
+    id "net.raphimc.class-token-replacer" version "1.0.0"
 }
 
 base {
@@ -29,9 +29,13 @@ dependencies {
     implementation "org.yaml:snakeyaml:2.2"
 }
 
-blossom {
-    replaceToken("\${version}", project.version, "src/main/java/net/raphimc/viaaprilfools/ViaAprilFools.java")
-    replaceToken("\${impl_version}", "git-${project.name}-${project.version}:${latestCommitHash()}", "src/main/java/net/raphimc/viaaprilfools/ViaAprilFools.java")
+sourceSets {
+    main {
+        classTokenReplacer {
+            property("\${version}", project.version)
+            property("\${impl_version}", "git-${project.name}-${project.version}:${project.latestCommitHash()}")
+        }
+    }
 }
 
 java {
