--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ repositories {
 dependencies {
     compileOnly "com.viaversion:viaversion-common:4.9.0-23w44a-SNAPSHOT"
     compileOnly "com.viaversion:viabackwards-common:4.9.0-23w44a-SNAPSHOT"
+    compileOnly "org.yaml:snakeyaml:2.2"
     compileOnly "com.google.guava:guava:32.1.3-jre"
+    compileOnly "io.netty:netty-handler:4.1.100.Final"
     compileOnly "org.yaml:snakeyaml:2.2"
 }
 
