--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly "com.viaversion:viaversion-common:4.10.0-23w51b-SNAPSHOT"
-    compileOnly "com.viaversion:viabackwards-common:4.10.0-23w51b-SNAPSHOT"
+    compileOnly "com.viaversion:viaversion-common:4.10.0-24w04a-SNAPSHOT"
+    compileOnly "com.viaversion:viabackwards-common:4.10.0-24w04a-SNAPSHOT"
     compileOnly "org.yaml:snakeyaml:2.2"
     compileOnly "com.google.guava:guava:33.0.0-jre"
     compileOnly "io.netty:netty-handler:4.1.106.Final"
