--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly "com.viaversion:viaversion-common:4.10.0-1.20.5-rc2-SNAPSHOT"
-    compileOnly "com.viaversion:viabackwards-common:4.10.0-1.20.5-rc2-SNAPSHOT"
+    compileOnly "com.viaversion:viaversion-common:4.10.0"
+    compileOnly "com.viaversion:viabackwards-common:4.10.0"
     compileOnly "org.yaml:snakeyaml:2.2"
     compileOnly "com.google.guava:guava:33.1.0-jre"
     compileOnly "io.netty:netty-handler:4.1.109.Final"
