--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -2,6 +2,17 @@ plugins {
     id "vaf.platform-conventions"
 }
 
+repositories {
+    maven {
+        name = "SpigotMC"
+        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
+    }
+    maven {
+        name = "SpongePowered"
+        url "https://repo.spongepowered.org/repository/maven-public/"
+    }
+}
+
 dependencies {
     compileOnly(annotationProcessor("org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"))
 }
