--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id "vaf.platform-conventions"
 }
 
+repositories {
+    maven {
+        name = "FabricMC"
+        url "https://maven.fabricmc.net/"
+    }
+}
+
 dependencies {
     compileOnly(annotationProcessor("net.fabricmc:fabric-loader:0.11.3"))
     compileOnly(annotationProcessor("org.apache.logging.log4j:log4j-api:2.17.1"))
