Fix impl version string

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,7 +14,7 @@ sourceSets {
     main {
         classTokenReplacer {
             property("\${version}", project.version)
-            property("\${impl_version}", "git-${rootProject.name}-${project.version}:${rootProject.latestCommitHash()}")
+            property("\${impl_version}", "git-ViaAprilFools-${project.version}:${rootProject.latestCommitHash()}")
         }
     }
 }
