--- a/build-logic/src/main/groovy/vaf.base-conventions.gradle
+++ b/build-logic/src/main/groovy/vaf.base-conventions.gradle
@@ -8,7 +8,7 @@ repositories {
     mavenCentral()
     maven {
         name = "ViaVersion"
-        url "https://repo.viaversion.com"
+        url = "https://repo.viaversion.com"
     }
 }
 
