--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -5,7 +5,7 @@ plugins {
 repositories {
     maven {
         name = "FabricMC"
-        url "https://maven.fabricmc.net/"
+        url = "https://maven.fabricmc.net/"
     }
 }
 
