--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@ includeBuild("build-logic")
 setupViaSubproject("common")
 setupViaSubproject("bukkit")
 setupViaSubproject("fabric")
+setupViaSubproject("sponge")
 setupViaSubproject("velocity")
 
 void setupViaSubproject(String name) {
