--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 maven_group=net.raphimc
-maven_version=3.0.3-SNAPSHOT
+maven_version=3.0.3
 maven_description=ViaVersion addon to add support for some notable Minecraft snapshots
 
 # Smile emoji
