Updated gradle to 8.11

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,7 +13,7 @@ sourceSets {
     main {
         classTokenReplacer {
             property("\${version}", project.version)
-            property("\${impl_version}", "git-ViaAprilFools-${project.version}:${rootProject.latestCommitHash()}")
+            property("\${impl_version}", "git-ViaAprilFools-${project.version}:${rootProject.latestCommitHash().get()}")
         }
     }
 }
