Move artifacts net.raphimc -> com.viaversion
Also updates the copyright header/licensing.

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ViaAprilFools
-main: net.raphimc.viaaprilfools.BukkitPlugin
+main: com.viaversion.viaaprilfools.BukkitPlugin
 authors: [RK_01, FlorianMichael/EnZaXD]
 version: ${version}
 description: ${description}
