--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 
-maven_group=net.raphimc
-maven_version=3.0.5-SNAPSHOT
+maven_group=com.viaversion
+maven_version=4.0.0-SNAPSHOT
 maven_description=ViaVersion addon to add support for some notable Minecraft snapshots
 
 # Smile emoji
