--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 maven_group=com.viaversion
-maven_version=4.0.1
+maven_version=4.0.2-SNAPSHOT
 maven_description=ViaVersion addon to add support for some notable Minecraft snapshots
 
 # Smile emoji
