--- a/build-logic/src/main/groovy/vaf.base-conventions.gradle
+++ b/build-logic/src/main/groovy/vaf.base-conventions.gradle
@@ -22,8 +22,8 @@ base {
 }
 
 dependencies {
-    compileOnly "com.viaversion:viaversion-common:5.3.1"
-    compileOnly "com.viaversion:viabackwards-common:5.3.1"
+    compileOnly "com.viaversion:viaversion-common:5.3.3-SNAPSHOT"
+    compileOnly "com.viaversion:viabackwards-common:5.3.2"
 }
 
 publishing {
