--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,34 @@
-# Compiled class file
-*.class
+# Gradle
 
-# Log file
-*.log
-*.log.gz
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Project files
-/.idea/*
-!/.idea/copyright/
 .gradle/
 build/
 out/
-common/run/
+classes/
+.kotlin/
+
+# Eclipse
+
+*.launch
+
+# Idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# VSCode
+
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# macOS
+
+*.DS_Store
+
+# Misc
+
+run/
