--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.configuration-cache=true
 project_jvm_version=17
 
 project_group=com.viaversion
-project_version=4.0.7-SNAPSHOT
+project_version=4.0.7
 project_description=ViaVersion addon to add support for some notable Minecraft snapshots
 
 publishing_dev_id=FlorianMichael
